- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.9, 5.10, 5.11, 5.12, 5.13
- 
    None
- 
    Linux/X11
- 
        
- 
        f2a61f2ce2fa81acb526965d55e5f22d47673b2a (qt/qtbase/5.14)
Moving the window to another screen might change its device pixel ratio. In this case we need to update windows size hints to scale hints like minimum and maximum window size.
Steps to reproduce:
- run the sample application from QTBUG-80323on screen with DPR 2.0,
- move the application to screen with DPR 1.0,
- try to resize the window to its minimum or maximum.
This bug is partially-dependent on QTBUG-80323.
| For Gerrit Dashboard: QTBUG-80476 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 283445,5 | xcb: Propagate size hints when window changes its scaling factor | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |